trying to ignore changes to creds.cfg

--- a/creds.cfg
+++ b/creds.cfg
@@ -1,7 +1,7 @@
 [default]
 url=https://zenoss5.zenossmaster:443/
-username=username
-password=password
+username=user
+password=pass
 ssl_verify=False
 timeout=5
 retries=4
